--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "export": "next export",
     "typegen": "sanity schema extract && sanity typegen generate"
   },
   "dependencies": {
@@ -34,6 +35,7 @@
     "radix-ui": "^1.1.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-player": "^2.16.0",
     "sanity": "^3.72.1",
     "stripe": "^17.6.0",
